fixed overflow

--- a/src/app/page.css
+++ b/src/app/page.css
@@ -2,11 +2,12 @@
 display: flex;
 align-items: center;
 justify-content: center;
-height: 100vh;
+min-height: 90vh;
 }
 
 .home-body{
-    text-align: center;
+text-align: center;
+color: white;
 }
 
 .home-heading{
